[metadata]
name = sdeconv
version = 1.0.0
author = Sylvain Prigent
author_email = meriadec.prigent@gmail.com
url = https://github.com/sylvainprigent/sdeconv
license = BSD 3-Clause
description = implementation microscopy deconvolution algorithms
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD 3-Clause

[options]
packages = find:
python_requires = >=3.9

# add your package requirements here
install_requires =
    torch>=1.9.1
    torchvision
    scikit-image>=0.18.3

[options.entry_points]
console_scripts =
    sdeconv = sdeconv.cli.sdeconv:main
    spsf = sdeconv.cli.spsf:main
