[metadata]
name = sdeconv
version = 1.0.3
author = Sylvain Prigent
author_email = meriadec.prigent@gmail.com
url = https://github.com/sylvainprigent/sdeconv
license = BSD 3-Clause
description = Implementation of 2D and 3D scientific image deconvolution
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    scipy>=1.8.1
    numpy>=1.22.4
    torch>=1.11.0
    torchvision>=0.12.0
    scikit-image>=0.19.2

[options.package_data]
* = */*.tif

[options.entry_points]
console_scripts =
    spsf = sdeconv.cli.spsf:main
    sdeconv = sdeconv.cli.sdeconv:main
